{
    "version": 0,
    "name": "InputSystem",
    "maps": [],
    "controlSchemes": []
}